[sc-4773] Better error management on resource list and search
- When loading label sets fails, return an empty labelset so following observables are not blocked
- When deleting/reprocessing a resource fails, catch the error and update bulkAction accordingly, so we can display an error toast at the end

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -151,6 +151,10 @@
 	"entity.search_synonym": "Busca i selecciona el sinònim",
 	"entity.synonym": "Sinònim",
 	"entity.unlink_entity": "Desenllaçar l'entitat. Es crearà una nova entitat no relacionada",
+	"error.deleting-resource": "No s'ha pogut suprimir el recurs",
+	"error.deleting-resources": "No s'ha pogut suprimir {{count}} recursos",
+	"error.reprocessing-resource": "No s'ha pogut tornar a processar el recurs",
+	"error.reprocessing-resources": "S'ha produït un error en el reprocessament de {{count}} recursos",
 	"farewell.message": "<p>Ens sap greu que te'n vagis {{username}}!</p>\n<p>Ens assegurarem d'eliminar el teu usuari i dades de Nuclia. En nom de l'equip de Nuclia et volem agrair el temps que has dedicat a la nostra plataforma.</p>\n<p>Si creus que podriem haver fet alguna cosa millor, sisplau <a href=\"mailto:{{email}}\">fes-nos-ho saber</a>. Ens encantaria saber-ho.</p>\n<p>Gràcies!</p>",
 	"farewell.title": "Fins aviat 👋",
 	"filter.filters_applied": "Filtres aplicats",
