--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -166,6 +166,10 @@
 	"entity.search_synonym": "Search and select the synonym",
 	"entity.synonym": "Synonyms",
 	"entity.unlink_entity": "Unlink entity. A new unrelated entity will be created",
+	"error.deleting-resource": "Deleting the resource failed",
+	"error.deleting-resources": "Deletion failed for {{count}} resources",
+	"error.reprocessing-resource": "Reprocessing the resource failed",
+	"error.reprocessing-resources": "Reprocessing failed for {{count}} resources",
 	"farewell.message": "<p>We are sad to see you go, {{username}}!</p>\n<p>We will make sure we remove your account and data from Nuclia. On behalf of Nuclia’s team, we thank you for the time you invested in our platform.</p>\n<p>If you think we could have done something better, please <a href=\"mailto:{{email}}\">let us know</a>. We would love to hear from you.</p>\n<p>Thank you!</p>",
 	"farewell.title": "See you soon 👋",
 	"filter.filters_applied": "Filters applied",
