--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -151,6 +151,10 @@
 	"entity.search_synonym": "Busca y selecciona el sinónimo",
 	"entity.synonym": "Sinónimo",
 	"entity.unlink_entity": "Desenlazar la entidad. Se creará una nueva entidad no relacionada",
+	"error.deleting-resource": "Error al eliminar el recurso",
+	"error.deleting-resources": "Error al eliminar {{count}} recursos",
+	"error.reprocessing-resource": "Error al reprocesar el recurso",
+	"error.reprocessing-resources": "Error de reprocesamiento de {{count}} recursos",
 	"farewell.message": "<p>Nos entristece que te vayas {{username}}!</p>\n<p>Nos aseguraremos de eliminar tu usuario y datos de Nuclia. En nombre del equipo de Nuclia te queremos agradecer el tiempo que has dedicado a nuestra plataforma.</p>\n<p>Si crees que podríamos haber echo alguna cosa mejor, por favor <a href=\"mailto:{{email}}\">háznoslo saber</a>. Nos encantaría saberlo.</p>\n<p>Gracias!</p>",
 	"farewell.title": "Hasta pronto 👋",
 	"filter.filters_applied": "Filtros aplicados",
