Currency and prices from backend

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -102,13 +102,31 @@
 	"billing.company": "Empresa",
 	"billing.contact": "Contactar",
 	"billing.cost_per_usage": "Cost per ús",
-	"billing.cost_per_usage.description": "Els preus de la taula s'apliquen quan s'exedeixen els límits mensuals.",
+	"billing.cost_per_usage.description": "Si supereu els límits, s'aplicarà el cost per ús.",
 	"billing.country": "País",
 	"billing.custom_plan": "Pla personalitzat",
-	"billing.customized_plan": "Si necessites ampliar o personalitzar un pla per a la teva empresa, no dubtis a contactar amb nosaltres.",
+	"billing.customized_plan": "Si sou una start-up o necessiteu ampliar i personalitzar un pla per al vostre negoci, no dubteu a posar-vos en contacte amb nosaltres.",
 	"billing.estimate_cost": "Estima el teu cost",
+	"billing.features.anon": "Anonimat de dades",
+	"billing.features.apikey": "Clau d'API autoallotjada",
+	"billing.features.boost": "Potenciador d'indexació",
+	"billing.features.desktop": "Aplicació d'escriptori per a la ingesta de dades",
+	"billing.features.extension": "Extensió de Chrome",
+	"billing.features.indexing": "Indexació de documents",
+	"billing.features.multilang": "Cerca en diversos idiomes",
+	"billing.features.ner": "Detecció NER",
+	"billing.features.rank": "Sintonitzador de classificació",
+	"billing.features.thumbnails": "Generació de miniatures",
+	"billing.features.title": "Totes les funcions disponibles",
+	"billing.features.trend": "Cerca temes de tendència",
+	"billing.features.typo": "Cerca de tolerància a errors ortogràfics",
+	"billing.features.url": "Indexació d'URL",
+	"billing.features.usage": "Analítica d'ús i retenció",
+	"billing.features.videos": "Vídeos i indexació d'àudio",
+	"billing.features.widget": "Accés al sistema de widgets",
 	"billing.free": "Gratuït",
 	"billing.hosting_subscription": "Subscripció d'allotjament",
+	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
 	"billing.ingestion_cost.description": "És proporcional al consum. Calculem el consum per nombre de paràgrafs.<br> Aquí pots fer una aproximació mensual segons les teves necessitats.",
 	"billing.month": "Mes",
@@ -122,9 +140,21 @@
 	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
 	"billing.payment_method": "Mètode de pagament",
 	"billing.postal_code": "Còdi postal",
+	"billing.quotas": "Quotes mensuals",
+	"billing.quotas.answers": "Resposta generativa",
+	"billing.quotas.files": "Nombre màxim de fitxers",
+	"billing.quotas.kbs": "Nombre de caixes de coneixement",
+	"billing.quotas.medias": "Indexació de vídeo i àudio",
+	"billing.quotas.searches": "Recerques",
+	"billing.quotas.training": "Formació",
+	"billing.quotas.up-to": "Fins a",
 	"billing.save_continue": "Desar i Continuar",
 	"billing.state": "Província",
-	"billing.subscription_plans": "Plans de subscripció",
+	"billing.subscription.country": "Seleccioneu el país de facturació",
+	"billing.subscription.help": "Tots els plans de subscripció tenen accés a totes les funcions.",
+	"billing.subscription.show-features": "Veure totes les característiques",
+	"billing.subscription.title": "Plans de subscripció",
+	"billing.trial.title": "30 dies de prova",
 	"billing.upgrade": "Actualitzar",
 	"billing.vat_id": "VAT ID",
 	"confirm.delete_body": "Eliminar recurs",
