--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -71,8 +71,10 @@
 	"account.type.label": "Nivell",
 	"account.type.stash-basic": "Compte Bàsic",
 	"account.type.stash-business": "Compte d'empresa",
+	"account.type.stash-developer": "Compte de desenvolupador",
 	"account.type.stash-enterprise": "Compte d'empresa",
 	"account.type.stash-pro": "Compte professional",
+	"account.type.stash-startup": "Compte de startup",
 	"account.type.stash-team": "Compte d'equips",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
