--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -81,8 +81,10 @@
 	"account.type.label": "Tier",
 	"account.type.stash-basic": "Basic Account",
 	"account.type.stash-business": "Business Account",
+	"account.type.stash-developer": "Developer account",
 	"account.type.stash-enterprise": "Enterprise Account",
 	"account.type.stash-pro": "Professional Account",
+	"account.type.stash-startup": "Startup account",
 	"account.type.stash-team": "Teams Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
