--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -71,8 +71,10 @@
 	"account.type.label": "Nivel",
 	"account.type.stash-basic": "Cuenta básica",
 	"account.type.stash-business": "Cuenta de negocios",
+	"account.type.stash-developer": "Cuenta de desarrollador",
 	"account.type.stash-enterprise": "Cuenta empresarial",
 	"account.type.stash-pro": "Cuenta profesional",
+	"account.type.stash-startup": "Cuenta de startup",
 	"account.type.stash-team": "Cuenta de equipos",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
