Currency and prices from backend (#658)
* Currency and prices from backend

* review

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -81,8 +81,10 @@
 	"account.type.label": "Tier",
 	"account.type.stash-basic": "Basic Account",
 	"account.type.stash-business": "Business Account",
+	"account.type.stash-developer": "Developer account",
 	"account.type.stash-enterprise": "Enterprise Account",
 	"account.type.stash-pro": "Professional Account",
+	"account.type.stash-startup": "Startup account",
 	"account.type.stash-team": "Teams Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
@@ -115,19 +117,36 @@
 	"billing.company": "Company",
 	"billing.contact": "Contact us",
 	"billing.cost_per_usage": "Cost-per-usage",
-	"billing.cost_per_usage.description": "The prices in the table below apply when the limits per month are exceeded.",
+	"billing.cost_per_usage.description": "If you exceed the limits, cost per usage will be applied.",
 	"billing.country": "Country",
 	"billing.custom_plan": "Custom plan",
-	"billing.customized_plan": "If you need to expand and customize a plan for your business, please do not hesitate to contact us.",
+	"billing.customized_plan": "If you are a start up or you need to expand and customize a plan for your business, please do not hesitate to contact us. ",
 	"billing.estimate_cost": "Estimate your cost",
+	"billing.features.anon": "Data Anonymization",
+	"billing.features.apikey": "Self-hosted API key",
+	"billing.features.boost": "Indexing booster",
+	"billing.features.desktop": "Desktop Application for data ingestion",
+	"billing.features.extension": "Chrome Extension",
+	"billing.features.indexing": "Document Indexing",
+	"billing.features.multilang": "Multi-language search",
+	"billing.features.ner": "NER Detection",
+	"billing.features.rank": "Ranking tuner",
+	"billing.features.thumbnails": "Thumbnails generation",
+	"billing.features.title": "All available features",
+	"billing.features.trend": "Search trend topics",
+	"billing.features.typo": "Typo tolerance search",
+	"billing.features.url": "URL indexing",
+	"billing.features.usage": "Usage analytics and retention",
+	"billing.features.videos": "Videos and audio indexing",
+	"billing.features.widget": "Widget system access",
 	"billing.free": "Free",
 	"billing.hosting_subscription": "Hosting subscription",
+	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
 	"billing.ingestion_cost.description": "Will be proportional to consumption. We calculate consumption by number of paragraphs.<br> Here you can make a real monthly approximation according to your needs.",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Monthly estimated cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
-	"billing.notes": "*Suggestions are 1/4 of a search and questions are 2 searches",
 	"billing.parameter.documents": "How many documents?",
 	"billing.parameter.hosting": "Data hosting in paragraphs",
 	"billing.parameter.hours": "How many hours of videos/audios?",
@@ -136,9 +155,21 @@
 	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
 	"billing.payment_method": "Payment method",
 	"billing.postal_code": "ZIP",
+	"billing.quotas": "Monthly quotas",
+	"billing.quotas.answers": "Generative answer",
+	"billing.quotas.files": "Maximum number of files",
+	"billing.quotas.kbs": "Number of knowledge boxes",
+	"billing.quotas.medias": "Video & audio indexing ",
+	"billing.quotas.searches": "Searches",
+	"billing.quotas.training": "Training",
+	"billing.quotas.up-to": "Up to",
 	"billing.save_continue": "Save & Continue",
 	"billing.state": "State",
-	"billing.subscription_plans": "Subscription plans",
+	"billing.subscription.country": "Select the billing country",
+	"billing.subscription.help": "All subscription plans have access to all features.",
+	"billing.subscription.show-features": "See all features",
+	"billing.subscription.title": "Subscription plans",
+	"billing.trial.title": "30 days trial",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
 	"confirm.delete_body": "Delete resource",
