--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -71,8 +71,10 @@
 	"account.type.label": "Nivel",
 	"account.type.stash-basic": "Cuenta básica",
 	"account.type.stash-business": "Cuenta de negocios",
+	"account.type.stash-developer": "Cuenta de desarrollador",
 	"account.type.stash-enterprise": "Cuenta empresarial",
 	"account.type.stash-pro": "Cuenta profesional",
+	"account.type.stash-startup": "Cuenta de startup",
 	"account.type.stash-team": "Cuenta de equipos",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
@@ -102,13 +104,31 @@
 	"billing.company": "Empresa",
 	"billing.contact": "Contactar",
 	"billing.cost_per_usage": "Coste por uso",
-	"billing.cost_per_usage.description": "Los precios de la siguiente tabla se aplican cuando se superan los límites mensuales.",
+	"billing.cost_per_usage.description": "Si excede los límites, se aplicará el costo por uso.",
 	"billing.country": "País",
 	"billing.custom_plan": "Plan personalizado",
-	"billing.customized_plan": "Si necesitas ampliar o personalizar un plan para tu empresa, no dudes en contactar con nosotros.",
+	"billing.customized_plan": "Si eres una start up o necesitas ampliar y personalizar un plan para tu negocio, no dudes en contactarnos.",
 	"billing.estimate_cost": "Estima tu coste",
+	"billing.features.anon": "Anonimización de datos",
+	"billing.features.apikey": "Clave de API autohospedada",
+	"billing.features.boost": "Refuerzo de indexación",
+	"billing.features.desktop": "Aplicación de escritorio para ingesta de datos",
+	"billing.features.extension": "Extensión de Chrome",
+	"billing.features.indexing": "Indexación de documentos",
+	"billing.features.multilang": "Búsqueda en varios idiomas",
+	"billing.features.ner": "Detección de NER",
+	"billing.features.rank": "sintonizador de clasificación",
+	"billing.features.thumbnails": "Generación de miniaturas",
+	"billing.features.title": "Todas las funciones disponibles",
+	"billing.features.trend": "Buscar temas de tendencia",
+	"billing.features.typo": "Búsqueda de tolerancia a errores tipográficos",
+	"billing.features.url": "indexación de URL",
+	"billing.features.usage": "Análisis de uso y retención",
+	"billing.features.videos": "Indexación de videos y audio",
+	"billing.features.widget": "Acceso al sistema de widgets",
 	"billing.free": "Gratuito",
 	"billing.hosting_subscription": "Subscripción de alojamiento",
+	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
 	"billing.ingestion_cost.description": "Es proporcional al consumo. Calculamos el consumo por número de párrafos.<br> Aquí puedes hacer una aproximación mensual según tus necesidades.",
 	"billing.month": "Mes",
@@ -122,9 +142,21 @@
 	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
 	"billing.payment_method": "Método de pago",
 	"billing.postal_code": "Código postal",
+	"billing.quotas": "Cuotas mensuales",
+	"billing.quotas.answers": "Respuesta generativa",
+	"billing.quotas.files": "Cantidad máxima de archivos",
+	"billing.quotas.kbs": "Número de cajas de conocimiento",
+	"billing.quotas.medias": "Indexación de video y audio",
+	"billing.quotas.searches": "Búsquedas",
+	"billing.quotas.training": "Capacitación",
+	"billing.quotas.up-to": "Hasta",
 	"billing.save_continue": "Guardar y Continuar",
 	"billing.state": "Provincia",
-	"billing.subscription_plans": "Planes de subscripción",
+	"billing.subscription.country": "Seleccione el país de facturación",
+	"billing.subscription.help": "Todos los planes de suscripción tienen acceso a todas las funciones.",
+	"billing.subscription.show-features": "Ver todas las funciones",
+	"billing.subscription.title": "Planes de subscripción",
+	"billing.trial.title": "30 días de prueba",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
 	"confirm.delete_body": "Eliminar recurso",
