Rename Insights menu by Named entities

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -221,7 +221,6 @@
 	"generic.goToDetail": "Go to resource",
 	"generic.help": "Help",
 	"generic.iamsure": "Yes, I’m sure",
-	"generic.insights": "Insights",
 	"generic.language": "Language",
 	"generic.link": "Link",
 	"generic.logout": "Logout",
@@ -229,6 +228,7 @@
 	"generic.member": "Member",
 	"generic.name": "Name",
 	"generic.name_entity": "Insight",
+	"generic.named-entities": "Named entities",
 	"generic.next": "Next",
 	"generic.next_step": "Next step",
 	"generic.no": "No",
