--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -210,6 +210,7 @@
 	"generic.member": "Member",
 	"generic.name": "Nombre",
 	"generic.name_entity": "Concepto clave",
+	"generic.named-entities": "Entidades nombradas",
 	"generic.next": "Siguiente",
 	"generic.next_step": "Siguiente paso",
 	"generic.no": "No",
