--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -242,6 +242,7 @@
 	"generic.member": "Member",
 	"generic.name": "Nom",
 	"generic.name_entity": "Concepte clau",
+	"generic.named-entities": "Entitats anomenades",
 	"generic.next": "Següent",
 	"generic.next_step": "Següent pas",
 	"generic.no": "No",
