[sc-4815] Update account type to be aligned with backend

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -73,9 +73,9 @@
 	"account.type.stash-business": "Compte d'empresa",
 	"account.type.stash-developer": "Compte de desenvolupador",
 	"account.type.stash-enterprise": "Compte d'empresa",
-	"account.type.stash-pro": "Compte professional",
 	"account.type.stash-startup": "Compte de startup",
 	"account.type.stash-team": "Compte d'equips",
+	"account.type.stash-trial": "Compte de prova",
 	"account.users": "Gestió d'usuaris",
 	"account.users_amount": "Nombre total d'usuaris al compte",
 	"account.users_left": "Llicències disponibles",
@@ -518,7 +518,6 @@
 	"resource.entities.product": "Productes",
 	"resource.entities.quantity": "Quantitat",
 	"resource.entities.time": "Temps",
-	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
 	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
