--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -83,9 +83,9 @@
 	"account.type.stash-business": "Business Account",
 	"account.type.stash-developer": "Developer account",
 	"account.type.stash-enterprise": "Enterprise Account",
-	"account.type.stash-pro": "Professional Account",
 	"account.type.stash-startup": "Startup account",
 	"account.type.stash-team": "Teams Account",
+	"account.type.stash-trial": "Trial Account",
 	"account.users": "Account users management",
 	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total licenses left",
@@ -540,7 +540,6 @@
 	"resource.entities.product": "Products",
 	"resource.entities.quantity": "Quantity",
 	"resource.entities.time": "Time",
-	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
 	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
