--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -73,9 +73,9 @@
 	"account.type.stash-business": "Cuenta de negocios",
 	"account.type.stash-developer": "Cuenta de desarrollador",
 	"account.type.stash-enterprise": "Cuenta empresarial",
-	"account.type.stash-pro": "Cuenta profesional",
 	"account.type.stash-startup": "Cuenta de startup",
 	"account.type.stash-team": "Cuenta de equipos",
+	"account.type.stash-trial": "Cuenta de prueba",
 	"account.users": "Gestión de usuarios",
 	"account.users_amount": "Usuarios totales a la cuenta",
 	"account.users_left": "Licencias disponibles",
@@ -518,7 +518,6 @@
 	"resource.entities.product": "Productos",
 	"resource.entities.quantity": "Cantidad",
 	"resource.entities.time": "Tiempo",
-	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
 	"resource.field-annotation.help": "Seleccione una familia para resaltar y anotar las entidades correspondientes",
