choose local or external server

--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -27,6 +27,12 @@
 	"upload.select.all": "Seleccionar todo",
 	"upload.select.description": "Selecciona los datos que quieres subir",
 	"upload.select.search": "Busca",
+	"upload.server.external": "Servidor externo",
+	"upload.server.external-button": "Usar servidor externo",
+	"upload.server.local": "Servidor local",
+	"upload.server.local-button": "Usar servidor local",
+	"upload.server.title": "Conectarse al servidor de sincronización",
+	"upload.server.url": "URL del servidor",
 	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
 	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
 	"upload.source.quick_access": "Guardar las credenciales de autenticación para futuras subidas desde el mismo origen.",
