--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -27,6 +27,12 @@
 	"upload.select.all": "Sélectionner tout",
 	"upload.select.description": "Sélectionnez les données que vous souhaitez télécharger",
 	"upload.select.search": "Rechercher",
+	"upload.server.external": "Serveur externe",
+	"upload.server.external-button": "Utiliser un serveur externe",
+	"upload.server.local": "Serveur local",
+	"upload.server.local-button": "Utiliser le serveur local",
+	"upload.server.title": "Se connecter au serveur de synchronisation",
+	"upload.server.url": "URL du serveur",
 	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
 	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
 	"upload.source.quick_access": "Enregistrez les informations de connexion pour les futurs téléchargements à partir de la même source.",
