--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -27,6 +27,12 @@
 	"upload.select.all": "Seleccionar tot",
 	"upload.select.description": "Selecciona les dades que vols pujar",
 	"upload.select.search": "Cerca",
+	"upload.server.external": "Servidor extern",
+	"upload.server.external-button": "Utilitzeu un servidor extern",
+	"upload.server.local": "Servidor local",
+	"upload.server.local-button": "Utilitzeu el servidor local",
+	"upload.server.title": "Connecteu-vos al servidor de sincronització",
+	"upload.server.url": "URL del servidor",
 	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
 	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
 	"upload.source.quick_access": "Desar les credencials d'autenticació per futures pujades des del mateix origen.",
