--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -27,6 +27,12 @@
 	"upload.select.all": "Select all",
 	"upload.select.description": "Select the data you want to upload",
 	"upload.select.search": "Search",
+	"upload.server.external": "External server",
+	"upload.server.external-button": "Use external server",
+	"upload.server.local": "Local server",
+	"upload.server.local-button": "Use local server",
+	"upload.server.title": "Connect to sync server",
+	"upload.server.url": "Server URL",
 	"upload.source.description": "Choose source for uploads",
 	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
 	"upload.source.quick_access": "Save the login credentials for future uploads from the same source.",
