[sc-4781] Implement billing navigation (#663)
* [sc-4781] Implement billing navigation

* Improve text

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -156,6 +156,7 @@
 	"billing.subscription.help": "Todos los planes de suscripción tienen acceso a todas las funciones.",
 	"billing.subscription.show-features": "Ver todas las funciones",
 	"billing.subscription.title": "Planes de subscripción",
+	"billing.success": "Suscripción exitosa",
 	"billing.trial.title": "30 días de prueba",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
