choose permanent sync or not

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -35,8 +35,8 @@
 	"upload.server.url": "URL del servidor",
 	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
 	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
-	"upload.source.quick_access": "Desar les credencials d'autenticació per futures pujades des del mateix origen.",
-	"upload.source.quick_access_name": "Anomena l'accés directe",
+	"upload.source.permanent-sync": "Sincronització permanent",
+	"upload.source.quick_access_name": "Anomena la teva font",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Escollir dades",
