--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -35,8 +35,8 @@
 	"upload.server.url": "Server URL",
 	"upload.source.description": "Choose source for uploads",
 	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
-	"upload.source.quick_access": "Save the login credentials for future uploads from the same source.",
-	"upload.source.quick_access_name": "Name your quick access",
+	"upload.source.permanent-sync": "Permanent synchronization",
+	"upload.source.quick_access_name": "Name your source",
 	"upload.source.title": "Source integration",
 	"upload.steps.configure": "Configure",
 	"upload.steps.data": "Choose data",
