--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -35,8 +35,8 @@
 	"upload.server.url": "URL del servidor",
 	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
 	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
-	"upload.source.quick_access": "Guardar las credenciales de autenticación para futuras subidas desde el mismo origen.",
-	"upload.source.quick_access_name": "Nombra el acceso directo",
+	"upload.source.permanent-sync": "Sincronización permanente",
+	"upload.source.quick_access_name": "Nombra tu fuente",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Elegir datos",
