--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give the administrator role to this user, they will be able to access and edit all options.",
-	"account.billing": "Billing",
+	"account.billing": "Tiers & Billing",
 	"account.chart_ML_characters": "ML characters",
 	"account.chart_documents": "Non-media documents",
 	"account.chart_error_chars": "Unable to fetch \"ML characters\" data",
@@ -140,17 +140,17 @@
 	"billing.features.videos": "Videos and audio indexing",
 	"billing.features.widget": "Widget system access",
 	"billing.free": "Free",
-	"billing.hosting_subscription": "Hosting subscription",
 	"billing.hours": "hours",
 	"billing.ingestion_cost": "Ingestion costs",
 	"billing.ingestion_cost.description": "Will be proportional to consumption. We calculate consumption by number of paragraphs.<br> Here you can make a real monthly approximation according to your needs.",
 	"billing.month": "Month",
 	"billing.monthly_estimation": "Monthly estimated cost",
 	"billing.monthly_estimation.description": "The estimated cost provided is based on the defined values and is subject to change if these values are modified.",
-	"billing.parameter.documents": "How many documents?",
-	"billing.parameter.hosting": "Data hosting in paragraphs",
-	"billing.parameter.hours": "How many hours of videos/audios?",
+	"billing.parameter.files": "How many documents?",
+	"billing.parameter.media": "How many hours of videos/audios?",
+	"billing.parameter.qa": "How many generative answers?",
 	"billing.parameter.searches": "How many searches?",
+	"billing.parameter.training-hours": "How many hours of training?",
 	"billing.payment_details": "Payment details",
 	"billing.payment_details.description": "Your payment method will not be billed until the end of the month based on your usage.",
 	"billing.payment_method": "Payment method",
@@ -163,16 +163,19 @@
 	"billing.quotas.searches": "Searches",
 	"billing.quotas.training": "Training",
 	"billing.quotas.up-to": "Up to",
+	"billing.save_budget": "Save as budget limit",
 	"billing.save_continue": "Save & Continue",
+	"billing.self_hosted": "Contact us if you want your data self-hosted using NucliaDB to know all payment details.",
 	"billing.state": "State",
 	"billing.subscription.country": "Select the billing country",
 	"billing.subscription.help": "All subscription plans have access to all features.",
 	"billing.subscription.show-features": "See all features",
-	"billing.subscription.title": "Subscription plans",
+	"billing.subscription.title": "Subscription tiers",
 	"billing.success": "Successful subscription",
 	"billing.trial.title": "30 days trial",
 	"billing.upgrade": "Upgrade",
 	"billing.vat_id": "VAT ID",
+	"billing.without_vat": "Prices without VAT",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure you want to delete this resource?",
 	"empty.body": "We couldn’t find any relevant results. ",
