--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Añadir usuario",
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
-	"account.billing": "Facturación",
+	"account.billing": "Niveles y Facturación",
 	"account.chart_ML_characters": "Caracteres ML",
 	"account.chart_documents": "Documentos no multimedia",
 	"account.chart_error_chars": "No se pueden recuperar los datos de \"caracteres ML\"",
@@ -127,17 +127,17 @@
 	"billing.features.videos": "Indexación de videos y audio",
 	"billing.features.widget": "Acceso al sistema de widgets",
 	"billing.free": "Gratuito",
-	"billing.hosting_subscription": "Subscripción de alojamiento",
 	"billing.hours": "horas",
 	"billing.ingestion_cost": "Costos de ingestión",
 	"billing.ingestion_cost.description": "Es proporcional al consumo. Calculamos el consumo por número de párrafos.<br> Aquí puedes hacer una aproximación mensual según tus necesidades.",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Coste mensual estimado",
 	"billing.monthly_estimation.description": "El coste estimado proporcionado se basa en los valores definidos y está sujeto a cambios si se modifican estos valores.",
-	"billing.parameter.documents": "¿Cuántos documentos?",
-	"billing.parameter.hosting": "Alojamiento de datos en párrafos",
-	"billing.parameter.hours": "¿Cuántas horas de videos/audios?",
+	"billing.parameter.files": "¿Cuántos documentos?",
+	"billing.parameter.media": "¿Cuántas horas de videos/audios?",
+	"billing.parameter.qa": "¿Cuántas respuestas generativas?",
 	"billing.parameter.searches": "¿Cuántas búsquedas?",
+	"billing.parameter.training-hours": "¿Cuántas horas de entrenamientos?",
 	"billing.payment_details": "Datos de pago",
 	"billing.payment_details.description": "El pago no se hará efectivo hasta finales de mes en función del uso realizado.",
 	"billing.payment_method": "Método de pago",
@@ -150,16 +150,19 @@
 	"billing.quotas.searches": "Búsquedas",
 	"billing.quotas.training": "Capacitación",
 	"billing.quotas.up-to": "Hasta",
+	"billing.save_budget": "Guardar límite de presupuesto",
 	"billing.save_continue": "Guardar y Continuar",
+	"billing.self_hosted": "Póngase en contacto con nosotros para conocer todos los detalles de pago en caso de autoalojar sus datos mediante NucliaDB",
 	"billing.state": "Provincia",
 	"billing.subscription.country": "Seleccione el país de facturación",
 	"billing.subscription.help": "Todos los planes de suscripción tienen acceso a todas las funciones.",
 	"billing.subscription.show-features": "Ver todas las funciones",
-	"billing.subscription.title": "Planes de subscripción",
+	"billing.subscription.title": "Niveles de subscripción",
 	"billing.success": "Suscripción exitosa",
 	"billing.trial.title": "30 días de prueba",
 	"billing.upgrade": "Actualizar",
 	"billing.vat_id": "VAT ID",
+	"billing.without_vat": "Precios sin IVA",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
 	"empty.body": "Parece que no hemos podido encontrar ningún resultado lo suficientemente relevante. Por favor, vuelve a intentarlo",
