--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -5,7 +5,7 @@
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
-	"account.billing": "Facturació",
+	"account.billing": "Nivells i Facturació",
 	"account.chart_ML_characters": "Caràcters ML",
 	"account.chart_documents": "Documents no multimèdia",
 	"account.chart_error_chars": "No s'han pogut obtenir les dades dels \"caràcters ML\".",
@@ -127,17 +127,17 @@
 	"billing.features.videos": "Vídeos i indexació d'àudio",
 	"billing.features.widget": "Accés al sistema de widgets",
 	"billing.free": "Gratuït",
-	"billing.hosting_subscription": "Subscripció d'allotjament",
 	"billing.hours": "hores",
 	"billing.ingestion_cost": "Costos d'ingestió",
 	"billing.ingestion_cost.description": "És proporcional al consum. Calculem el consum per nombre de paràgrafs.<br> Aquí pots fer una aproximació mensual segons les teves necessitats.",
 	"billing.month": "Mes",
 	"billing.monthly_estimation": "Cost mensual estimat",
 	"billing.monthly_estimation.description": "El cost estimat proporcionat es basa en els valors definits i està subjecte a canvis si es modifiquen aquests valors.",
-	"billing.parameter.documents": "Quants documents?",
-	"billing.parameter.hosting": "Allotjament de dades en paràgrafs",
-	"billing.parameter.hours": "Quantes hores de vídeos/àudios?",
+	"billing.parameter.files": "Quants documents?",
+	"billing.parameter.media": "Quantes hores de vídeos/àudios?",
+	"billing.parameter.qa": "Quantes respostes generatives?",
 	"billing.parameter.searches": "Quantes cerques?",
+	"billing.parameter.training-hours": "Quantes hores d'entrenament?",
 	"billing.payment_details": "Dades de pagament",
 	"billing.payment_details.description": "El pagament no es farà efectiu fins a finals de mes en funció del vostre ús.",
 	"billing.payment_method": "Mètode de pagament",
@@ -150,16 +150,19 @@
 	"billing.quotas.searches": "Recerques",
 	"billing.quotas.training": "Formació",
 	"billing.quotas.up-to": "Fins a",
+	"billing.save_budget": "Guardar límit de pressupost",
 	"billing.save_continue": "Desar i Continuar",
+	"billing.self_hosted": "Poseu-vos en contacte amb nosaltres per conèixer tots els detalls de pagament en cas d'autoallotjar les vostres dades  mitjançant NucliaDB",
 	"billing.state": "Província",
 	"billing.subscription.country": "Seleccioneu el país de facturació",
 	"billing.subscription.help": "Tots els plans de subscripció tenen accés a totes les funcions.",
 	"billing.subscription.show-features": "Veure totes les característiques",
-	"billing.subscription.title": "Plans de subscripció",
+	"billing.subscription.title": "Nivells de subscripció",
 	"billing.success": "Subscripció satisfactòria",
 	"billing.trial.title": "30 dies de prova",
 	"billing.upgrade": "Actualitzar",
 	"billing.vat_id": "VAT ID",
+	"billing.without_vat": "Preus sense IVA",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
 	"empty.body": "Sembla que no hem pogut trobar cap resultats que sigui prou rellevant. Si us plau, intenta-ho de nou. ",
