[sc-4882] and [sc-4639]: better error state management
- If http error 402, display proper message on search widget
- Refactor search endpoints (search, find, catalog, suggest) and states to use a common `IErrorResponse` interface and return error status and detail

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -25,6 +25,7 @@
 	"entities.title": "Insights",
 	"entities.work_of_art": "Obres",
 	"error.audio-loading": "S'ha produït un error en carregar el fitxer d'àudio.",
+	"error.feature-blocked": "La funció de cerca no està permesa en aquest moment.",
 	"error.processing": "Aquest recurs encara no s'ha processat completament",
 	"error.search": "Ups! Alguna cosa ha anat malament!",
 	"error.search-beta": "Sort que t'hem avisat que encara estem en beta! 🙃",
