--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -26,6 +26,7 @@
 	"entities.title": "Insights",
 	"entities.work_of_art": "Art",
 	"error.audio-loading": "An error occurred while loading the audio file.",
+	"error.feature-blocked": "The search feature is not allowed at the moment.",
 	"error.processing": "This resource is not fully processed yet",
 	"error.search": "Oops! Something is wrong right now!",
 	"error.search-beta": "Luckily we told you it's a beta! 🙃",
