--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -23,6 +23,7 @@
 	"entities.title": "Insights",
 	"entities.work_of_art": "Œuvres",
 	"error.audio-loading": "Une erreur s'est produite lors du chargement du fichier audio.",
+	"error.feature-blocked": "La fonction de recherche n'est pas autorisée pour le moment.",
 	"error.processing": "Le traitement de cette ressource n'est pas complet",
 	"error.search": "Oups! quelque chose ne va pas!",
 	"error.search-beta": "Heureusement qu'on vous a dit que c'est une beta ! 🙃",
