Fix Chat layout [sc-4853]

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -3,6 +3,7 @@
 	"answer.input.label": "Entrada de xat",
 	"answer.placeholder": "Parlem",
 	"answer.sources": "A partir d'aquestes fonts",
+	"answer.sources-mobile": "Fonts",
 	"answer.title": "Resposta",
 	"entities.annotated": "Anotacions",
 	"entities.annotations": "Anotacions",
