--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -3,6 +3,7 @@
 	"answer.input.label": "Entrada de chat",
 	"answer.placeholder": "Charlemos",
 	"answer.sources": "Basado en estas fuentes",
+	"answer.sources-mobile": "Fuentes",
 	"answer.title": "Respuesta",
 	"entities.annotated": "Anotaciones",
 	"entities.annotations": "Anotaciones",
