--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -42,6 +42,7 @@
 	"account.generate_key": "Generate a new key",
 	"account.home": "Account dashboard",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
+	"account.kb-description": "A Knowledge Box is a collection of content that Nuclia searches on. Some search engines call it an \"index\" or \"corpus\".  In most cases, you only need one Knowledge Box for your application.",
 	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
 	"account.logo": "Box image",
