Fix [sc-3337]: add description on account kb list (#679)
* Fix [sc-3337]: add description on account kb list

* Fix [sc-4918]: add description on paragraph classification

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -35,6 +35,7 @@
 	"account.generate_key": "Generar un nou codi",
 	"account.home": "Tauler de control del compte",
 	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
+	"account.kb-description": "Un Knowledge Box és una col·lecció de contingut en què cerca Nuclia. Alguns motors de cerca l'anomenen \"índex\" o \"corpus\". En la majoria dels casos, només necessiteu un Knowledge Box per a la vostra aplicació.",
 	"account.knowledgeboxes": "Caixes de coneixement",
 	"account.licence": "Llicència",
 	"account.logo": "Imatge de la caixa",
@@ -527,6 +528,7 @@
 	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
 	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
 	"resource.field-classification": "Classificació de paràgrafs",
+	"resource.field-classification.help": "Trieu una etiqueta i seleccioneu els paràgrafs sobre els quals voleu que s'apliqui",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
