--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -42,6 +42,7 @@
 	"account.generate_key": "Generate a new key",
 	"account.home": "Account dashboard",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
+	"account.kb-description": "A Knowledge Box is a collection of content that Nuclia searches on. Some search engines call it an \"index\" or \"corpus\".  In most cases, you only need one Knowledge Box for your application.",
 	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
 	"account.logo": "Box image",
@@ -549,6 +550,7 @@
 	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
 	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
 	"resource.field-classification": "Paragraphs classification",
+	"resource.field-classification.help": "Choose a label and then select the paragraphs on which you want it to be applied",
 	"resource.field-file": "File Field",
 	"resource.field-file.dropzone": "Drop your file here or click to select it",
 	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
