--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -35,6 +35,7 @@
 	"account.generate_key": "Generar un nuevo código",
 	"account.home": "Panel de cuenta",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
+	"account.kb-description": "Una caja de conocimiento es una colección de contenido en la que Nuclia busca. Algunos motores de búsqueda lo llaman \"índice\" o \"corpus\". En la mayoría de los casos, solo necesita un Knowledge Box para su aplicación.",
 	"account.knowledgeboxes": "Cajas de conocimiento",
 	"account.licence": "Licencia",
 	"account.logo": "Imagen de la caja",
@@ -527,6 +528,7 @@
 	"resource.field-annotation.help": "Seleccione una familia para resaltar y anotar las entidades correspondientes",
 	"resource.field-annotation.select-family-before": "Seleccione una familia para que pueda agregar/editar/eliminar anotaciones",
 	"resource.field-classification": "Clasificación de párrafos",
+	"resource.field-classification.help": "Elija una etiqueta y luego seleccione los párrafos en los que desea que se aplique",
 	"resource.field-file": "Campo de Archivo",
 	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
 	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
