use regular fetch for better error management

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -3,6 +3,7 @@
 	"generic.logout": "Sortir",
 	"generic.save_continue": "Desar i continuar",
 	"generic.server_down": "El servidor de sincronització està inactiu",
+	"generic.server_up": "El servidor de sincronització està activat",
 	"generic.switch_account": "Canviar de compte",
 	"generic.upload": "Pujar",
 	"history.active": "Pujades actives",
