--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
 	"generic.logout": "Log out",
 	"generic.save_continue": "Save & Continue",
 	"generic.server_down": "Sync server is down",
+	"generic.server_up": "Sync server is up",
 	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
 	"history.active": "Active uploads",
