--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -3,6 +3,7 @@
 	"generic.logout": "Déconnexion",
 	"generic.save_continue": "Enregistrer et continuer",
 	"generic.server_down": "Le serveur de synchronisation est en panne",
+	"generic.server_up": "Le serveur de synchronisation est opérationnel",
 	"generic.switch_account": "Changer de compte",
 	"generic.upload": "Télécharger",
 	"history.active": "Téléchargements actifs",
