--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -722,6 +722,8 @@
 	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
 	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
+	"stash.widgets.navigateToFile": "Navega cap als arxius",
+	"stash.widgets.navigateToFile.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà l'arxiu original en lloc de mostrar-lo al visor.",
 	"stash.widgets.navigateToLink": "Navega cap als enllaços",
 	"stash.widgets.navigateToLink.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà la pàgina original en lloc de mostrar-la al visor.",
 	"stash.widgets.permalink": "Permalinks",
